# Soroban-Testing-Framework

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
crates/soroban-test-framework/: Cargo.toml
crates/soroban-test-framework/src/: assertions.rs  fixtures.rs  lib.rs  mocks.rs  runner.rs  scenario.rs
docs/: architecture.md  plan.md
examples/counter/: Cargo.toml
examples/counter/src/: lib.rs
examples/token/: Cargo.toml
examples/token/src/: lib.rs
